@@ -1,7 +1,7 @@
 # vim: ft=spec sw=4 et tw=78 com=b\:#,fb\:- fo+=tcqlorn nocin nosi
 # =============================================================================
 # 
-# @(#) $RCSfile: openss7.spec.in,v $ $Name:  $($Revision: 0.9.2.74 $) $Date: 2007/08/15 04:53:57 $
+# @(#) $RCSfile: openss7.spec.in,v $ $Name:  $($Revision: 0.9.2.75 $) $Date: 2008-04-10 11:12:56 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -46,7 +46,7 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2007/08/15 04:53:57 $ by $Author: brian $
+# Last Modified $Date: 2008-04-10 11:12:56 $ by $Author: brian $
 #
 # =============================================================================
 
@@ -2058,9 +2058,13 @@ fi
 %changelog
 # ---------------------------------------------------------------------------
 # $Log: openss7.spec.in,v $
-# Revision 0.9.2.74  2007/08/15 04:53:57  brian
-# - GPLv3 updates
+# Revision 0.9.2.75  2008-04-10 11:12:56  brian
+# - remove deprecated Nexusware support
 #
+
+* Wed Aug 15 2007 Brian Bidulock <bidulock@openss7.org>
+- Revision 0.9.2.74  2007/08/15 04:53:57  brian
+- GPLv3 updates
 
 * Sun Jun 24 2007 Brian Bidulock <bidulock@openss7.org>
 - Revision 0.9.2.73  2007/06/24 12:10:03  brian
